--- a/pablo.html
+++ b/pablo.html
@@ -19,7 +19,7 @@
                 <h2>Hola! Bienvenido</h2>
                 <p>186****7584</p>
             </div>
-            <!--Img-->
+            <img class="img2" src="./iconos-alex/ico-chavez/lapiz.png" alt="">
         </div>
 
         <div class="nums">
