--- a/pablo.html
+++ b/pablo.html
@@ -12,6 +12,17 @@
 <body>
     
     <section class="encabezado">
+        <header>
+            <div class="flecha">
+                <img src="./iconos-alex/ico-chavez/flechas.png" alt="">
+            </div>
+            <div class="flechas2">
+                <img src="./iconos-alex/ico-chavez/mensaje.png" alt="">
+            </div>
+            <div class="flechas3">
+                <img src="./iconos-alex/ico-chavez/qr.png" alt="">
+            </div>
+        </header>
         <div class="perfil">
             <img class="img1" src="./img-pablo/sapitouwu.png" alt="">
             <div class="textos">
@@ -56,30 +67,37 @@
     <section class="cuerpo">
         <div class="indice">
             <div class="viñeta1">
+                <h1>▌</h1>
                 <h3>Conichuwa</h3>
                 <p>></p>
             </div>
             <div class="viñeta2">
+                <h1>▌</h1>
                 <h3>Conichuwa</h3>
                 <p>></p>
             </div>
             <div class="viñeta3">
+                <h1>▌</h1>
                 <h3>Conichuwa</h3>
                 <p>></p>
             </div>
             <div class="viñeta4">
+                <h1>▌</h1>
                 <h3>Conichuwa</h3>
                 <p>></p>
             </div>
             <div class="viñeta5">
+                <h1>▌</h1>
                 <h3>Conichuwa</h3>
                 <p>></p>
             </div>
             <div class="viñeta6">
+                <h1>▌</h1>
                 <h3>Conichuwa</h3>
                 <p>></p>
             </div>
             <div class="viñeta7">
+                <h1>▌</h1>
                 <h3>Conichuwa</h3>
                 <p>></p>
             </div>
