--- a/melissa.html
+++ b/melissa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hola</title>
+    <title>Pagina_Melissa</title>
 
     <!---Archivos css------>
     <link rel="stylesheet" href="./css/config.css">
@@ -17,10 +17,15 @@
         <div class="cabeza">
             <div class="buscador"></div>
             <div class="A">
-                <img src="AA" alt="">
-                <img src="AB" alt="">
-                <img src="AC" alt="">
+                <img class="AA" src="./iconos-alex/ico-melissa/campana.png" alt="">
+                <img class="AB" src="./iconos-alex/ico-melissa/mas.png" alt="">
+                <img class="AC" src="./iconos-alex/ico-melissa/tuerquita.png" alt="">
             </div>
+        </div>
+
+        <div class="perfil">
+            <img src="./iconos-alex/ico-melissa/inicioperfil.png" alt="">
+            <p>立即登录</p>
         </div>
 
     </div>
@@ -29,5 +34,15 @@
         
     </div>
 
+
+   
+
+    <footer>
+       <img src="./iconos-alex/ico-melissa/footer1.png" alt="">
+       <img src="./" alt="">
+       <img src="" alt="">
+       <img src="" alt="">
+    </footer>   
 </body>
+
 </html>
