Progreso en un 80%, parte 2 casi finalizada

--- a/pablo.html
+++ b/pablo.html
@@ -68,38 +68,52 @@
         <div class="indice">
             <div class="viñeta1">
                 <h1>▌</h1>
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <div class="Cuadro1">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta2">
                 <h1>▌</h1>
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <div class="Cuadro2">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta3">
                 <h1>▌</h1>
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <div class="Cuadro3">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta4">
                 <h1>▌</h1>
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <div class="Cuadro4">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta5">
                 <h1>▌</h1>
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <div class="Cuadro5">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta6">
                 <h1>▌</h1>
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <div class="Cuadro6">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta7">
                 <h1>▌</h1>
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <div class="Cuadro7">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
         </div>
     </section>
