Se guardan cambios para poder actualizar el contenido.

--- a/keyli.html
+++ b/keyli.html
@@ -23,7 +23,7 @@
         </header>
 
         <section class="caja2">
-            <div class="imgperfil"></div>
+            <img class="imgperfil" src="./iconos-alex/ico-keily/perrito.png" alt="">
 
             <section class="caja2_1">
                 <h2 class="id">185****9654 </h2>
