--- a/claudia.html
+++ b/claudia.html
@@ -15,7 +15,7 @@
     <main>
         <section class="sec">
             <section>
-                <img class="imagen" src="https://pbs.twimg.com/profile_images/975454779492233216/yYCCXeJB_400x400.png" alt="">
+                <img class="imagen" src="./iconos-alex/ico-claudia/panda.png" alt="">
             </section>
             <section>
                 <h1 class="text">机器小怪物 <img class="lapiz" src="./iconos-alex/ico-claudia/lapiz.png" alt=""></h1>
@@ -28,20 +28,22 @@
 
         <section class="list">
             <section>
-                <img class="ico1" src="https://pbs.twimg.com/profile_images/975454779492233216/yYCCXeJB_400x400.png" alt="">
+                <img class="ico1" src="./iconos-alex/ico-claudia/sub2_1.png" alt="">
             </section>
-            <section>
-                <h1 class="titu1">我的预约</h1>
+            <section  class="apart5">
+                <h1 class="titu1">我的预约 </h1>
+                <h1 class="flecha1">></h1>
             </section>
         </section>
 
 
         <section class="list">
             <section>
-                <img class="ico2" src="https://pbs.twimg.com/profile_images/975454779492233216/yYCCXeJB_400x400.png" alt="">
+                <img class="ico2" src="./iconos-alex/ico-claudia/sub2_2.png" alt="">
             </section>
-            <section>
+            <section  class="apart5">
                 <h1 class="titu2">病例窗口</h1>
+                <h1 class="flecha2">></h1>
             </section>
         </section>
 
@@ -50,8 +52,9 @@
             <section>
                 <img class="ico3" src="./iconos-alex/ico-claudia/sub2_3.png" alt="">
             </section>
-            <section>
+            <section class="apart5">
                 <h1 class="titu3">我的钱包</h1>
+                <h1 class="flecha3">></h1>
             </section>
         </section>
 
@@ -60,8 +63,9 @@
             <section>
                 <img class="ico4" src="./iconos-alex/ico-claudia/sub2_4.png" alt="">
             </section>
-            <section>
+            <section class="apart5">
                 <h1 class="titu4">隐私政策</h1>
+                <h1 class="flecha4">></h1>
             </section>
         </section>
 
@@ -71,9 +75,9 @@
             <section>
                 <img class="ico5" src="./iconos-alex/ico-claudia/sub2_5.png" alt="">
             </section>
-            <section>
+            <section class="apart5">
                 <h1 class="titu5">帮助</h1>
-
+                <h1 class="flecha">></h1>
             </section>
         </section>
 
@@ -82,8 +86,9 @@
             <section>
                 <img class="ico6" src="./iconos-alex/ico-claudia/sub2_6.png" alt="">
             </section>
-            <section>
+            <section class="apart5">
                 <h1 class="titu6">设置</h1>
+                <h1 class="flecha6">></h1>
             </section>
         </section>
 
@@ -94,7 +99,16 @@
                 <section>
                     <img class="fot1" src="./iconos-alex/ico-claudia/footer2.png" alt="">
             </section>
+            <section>
+                <img class="fot1" src="./iconos-alex/ico-claudia/footer3.png">
+        </section>
+        <section>
+            <img class="fot1" src="./iconos-alex/ico-claudia/footerfinal.png" alt="">
+    </section>
         </footer>
+        <section>
+            <img class="linea" src="./iconos-alex/ico-claudia/linedelfooterfinal.png" alt="">
+    </section>
 
     </main>
     
