--- a/claudia.html
+++ b/claudia.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <main>
+        <section>
+            <img src="./iconos-alex/ico-claudia/" alt="">
+        </section>
         <section class="sec">
             <section>
                 <img class="imagen" src="./iconos-alex/ico-claudia/panda.png" alt="">
