Trabajo de plablo

--- a/pablo.html
+++ b/pablo.html
@@ -12,14 +12,24 @@
 <body>
     
     <section class="encabezado">
-        <header></header>
+        <header>
+            <div class="flecha">
+                <img src="./iconos-alex/ico-chavez/flechas.png" alt="">
+            </div>
+            <div class="flechas2">
+                <img src="./iconos-alex/ico-chavez/mensaje.png" alt="">
+            </div>
+            <div class="flechas3">
+                <img src="./iconos-alex/ico-chavez/qr.png" alt="">
+            </div>
+        </header>
         <div class="perfil">
             <img class="img1" src="./img-pablo/sapitouwu.png" alt="">
             <div class="textos">
                 <h2>Hola! Bienvenido</h2>
                 <p>186****7584</p>
             </div>
-            <!--Img-->
+            <img class="img2" src="./iconos-alex/ico-chavez/lapiz.png" alt="">
         </div>
 
         <div class="nums">
@@ -57,32 +67,53 @@
     <section class="cuerpo">
         <div class="indice">
             <div class="viñeta1">
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <h1>▌</h1>
+                <div class="Cuadro1">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta2">
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <h1>▌</h1>
+                <div class="Cuadro2">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta3">
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <h1>▌</h1>
+                <div class="Cuadro3">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta4">
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <h1>▌</h1>
+                <div class="Cuadro4">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta5">
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <h1>▌</h1>
+                <div class="Cuadro5">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta6">
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <h1>▌</h1>
+                <div class="Cuadro6">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
             <div class="viñeta7">
-                <h3>Conichuwa</h3>
-                <p>></p>
+                <h1>▌</h1>
+                <div class="Cuadro7">
+                    <h3>Conichuwa</h3>
+                    <p>></p>
+                </div>
             </div>
         </div>
     </section>
