Trabajo finalizado al 100%

--- a/pablo.html
+++ b/pablo.html
@@ -26,7 +26,7 @@
         <div class="perfil">
             <img class="img1" src="./img-pablo/sapitouwu.png" alt="">
             <div class="textos">
-                <h2>Hola! Bienvenido</h2>
+                <h2>蒸汽火车的茄子</h2>
                 <p>186****7584</p>
             </div>
             <img class="img2" src="./iconos-alex/ico-chavez/lapiz.png" alt="">
@@ -41,23 +41,28 @@
                 <li>136</li>
             </ul>
             <ul class="nums_nums">
-                <li>Hola</li>
-                <li>Cómo</li>
-                <li>OMG</li>
-                <li>Dos</li>
-                <li>JEJE</li>
+                <li>金币</li>
+                <li>优惠券</li>
+                <li>足迹</li>
+                <li>关注</li>
+                <li>收藏</li>
             </ul>
         </div>
         <div class="medio">
-            <h1>Saludos</h1>
+            <h1>我的资产</h1>
             <div class="logotipos">
-                <!--Img-->
+                <div class="pictures">
+                    <img src="./iconos-alex/ico-chavez/vanda1.png" alt="">
+                    <img src="./iconos-alex/ico-chavez/vanda2.png" alt="">
+                    <img src="./iconos-alex/ico-chavez/vanda3.png" alt="">
+                    <img src="./iconos-alex/ico-chavez/vanda4.png" alt="">
+                </div>
                 <div class="logs">
                     <ul class="letras">
-                        <li>Shongun</li>
-                        <li>Shingen</li>
-                        <li>Shoshuu</li>
-                        <li>Shuushu</li>
+                        <li>零钱</li>
+                        <li>积分</li>
+                        <li>银行卡</li>
+                        <li>订单</li>
                     </ul>
                 </div>
             </div>
@@ -67,51 +72,44 @@
     <section class="cuerpo">
         <div class="indice">
             <div class="viñeta1">
-                <h1>▌</h1>
                 <div class="Cuadro1">
-                    <h3>Conichuwa</h3>
+                    <h3>在线客服</h3>
                     <p>></p>
                 </div>
             </div>
             <div class="viñeta2">
-                <h1>▌</h1>
                 <div class="Cuadro2">
-                    <h3>Conichuwa</h3>
+                    <h3>问题反馈</h3>
                     <p>></p>
                 </div>
             </div>
             <div class="viñeta3">
-                <h1>▌</h1>
                 <div class="Cuadro3">
-                    <h3>Conichuwa</h3>
+                    <h3>帮助中心</h3>
                     <p>></p>
                 </div>
             </div>
             <div class="viñeta4">
-                <h1>▌</h1>
                 <div class="Cuadro4">
-                    <h3>Conichuwa</h3>
+                    <h3>我的任务</h3>
                     <p>></p>
                 </div>
             </div>
             <div class="viñeta5">
-                <h1>▌</h1>
                 <div class="Cuadro5">
-                    <h3>Conichuwa</h3>
+                    <h3>邀请好友</h3>
                     <p>></p>
                 </div>
             </div>
             <div class="viñeta6">
-                <h1>▌</h1>
                 <div class="Cuadro6">
-                    <h3>Conichuwa</h3>
+                    <h3>关于</h3>
                     <p>></p>
                 </div>
             </div>
             <div class="viñeta7">
-                <h1>▌</h1>
                 <div class="Cuadro7">
-                    <h3>Conichuwa</h3>
+                    <h3>设置</h3>
                     <p>></p>
                 </div>
             </div>
