--- a/melissa.html
+++ b/melissa.html
@@ -16,7 +16,9 @@
     <div class="caja1">
 
         <div class="cabeza">
-            <div class="buscador"></div>
+            <div class="buscador">
+                <img src="./iconos-alex/ico-melissa/barrabusq.png" alt="">
+            </div>
             <div class="A">
                 <img class="AA" src="./iconos-alex/ico-melissa/campana.png" alt="">
                 <img class="AB" src="./iconos-alex/ico-melissa/mas.png" alt="">
